finished all tests... color seems to not be working appropiately